fix the inuput field, not showing correct color

--- a/SketchPad/sketchPadStyle.css
+++ b/SketchPad/sketchPadStyle.css
@@ -7,8 +7,8 @@ body {
 	width: 500px;
 }
 button {
-	margin: auto;
 	display: block;
+	margin-left: 550px;
 }
 
 .gridElement {
